--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "candlestick",
+  "name": "ftw.candlestick",
   "version": "1.0.0",
   "repository": "https://github.com/4teamwork/ftw.candlestick",
   "license": "MIT",
