--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "test": "karma start"
   },
   "devDependencies": {
-    "grunt": "1.0.1",
-    "grunt-browserify": "5.0.0",
-    "grunt-contrib-watch": "1.0.0",
+    "babel-preset-es2015": "6.16.0",
+    "babelify": "7.3.0",
+    "babelify-es6-polyfill": "1.0.4",
+    "browserify-shim": "3.8.12",
+    "chai": "3.5.0",
+    "grunt": "^1.0.4",
+    "grunt-browserify": "^5.3.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-karma": "2.0.0",
-    "karma": "1.3.0",
-    "karma-browserify": "5.1.0",
     "jasmine-core": "2.5.2",
+    "jquery": "2.1.0",
+    "karma": "1.3.0",
+    "karma-babel-preprocessor": "6.0.1",
+    "karma-browserify": "5.1.0",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-fixture": "0.2.6",
+    "karma-html2js-preprocessor": "1.1.0",
     "karma-jasmine": "1.0.2",
     "karma-phantomjs-launcher": "1.0.2",
-    "karma-chrome-launcher": "2.0.0",
-    "chai": "3.5.0",
-    "karma-chai": "0.1.0",
-    "karma-fixture": "0.2.6",
-    "babelify": "7.3.0",
-    "babel-preset-es2015": "6.16.0",
-    "karma-babel-preprocessor": "6.0.1",
-    "karma-html2js-preprocessor": "1.1.0",
-    "babelify-es6-polyfill": "1.0.4",
-    "jquery": "2.1.0",
-    "browserify-shim": "3.8.12",
     "underscore": "1.8.3"
   },
   "dependencies": {
