--- a/package.json
+++ b/package.json
@@ -5,36 +5,40 @@
   "license": "MIT",
   "description": "Javascript library for automatically make phone links by walking through the DOM.",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "build": "grunt build && r.js -o build.js",
+    "watch": "chokidar \"./ftw/candlestick/resources/*.js\" -i \"**/*-compiled.js\" -c \"r.js -o build.js;\""
   },
   "devDependencies": {
+    "babel-preset-es2015": "6.16.0",
+    "babelify": "7.3.0",
+    "babelify-es6-polyfill": "1.0.4",
+    "browserify-shim": "3.8.12",
+    "chai": "3.5.0",
+    "chokidar-cli": "^2.1.0",
     "grunt": "1.0.1",
     "grunt-browserify": "5.0.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-karma": "2.0.0",
-    "karma": "1.3.0",
-    "karma-browserify": "5.1.0",
     "jasmine-core": "2.5.2",
+    "jquery": "2.1.0",
+    "karma": "1.3.0",
+    "karma-babel-preprocessor": "6.0.1",
+    "karma-browserify": "5.1.0",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-fixture": "0.2.6",
+    "karma-html2js-preprocessor": "1.1.0",
     "karma-jasmine": "1.0.2",
     "karma-phantomjs-launcher": "1.0.2",
-    "karma-chrome-launcher": "2.0.0",
-    "chai": "3.5.0",
-    "karma-chai": "0.1.0",
-    "karma-fixture": "0.2.6",
-    "babelify": "7.3.0",
-    "babel-preset-es2015": "6.16.0",
-    "karma-babel-preprocessor": "6.0.1",
-    "karma-html2js-preprocessor": "1.1.0",
-    "babelify-es6-polyfill": "1.0.4",
-    "jquery": "2.1.0",
-    "browserify-shim": "3.8.12",
+    "requirejs": "^2.3.6",
     "underscore": "1.8.3"
   },
   "dependencies": {
-    "google-libphonenumber": "1.1.0",
     "array-includes": "3.0.1",
-    "repeat-string": "1.5.4",
-    "escape-string-regexp": "1.0.5"
+    "escape-string-regexp": "1.0.5",
+    "google-libphonenumber": "1.1.0",
+    "repeat-string": "1.5.4"
   },
   "browserify-shim": {}
 }
