Explicitely set setuptool version in test-javascript.cfg.
Since the test-javascript.cfg is not meant to be run in a specific Python version necessarily but at the moment is run with Python 2.7 restricting it to <45 makes the tests run again.

--- a/test-javascript.cfg
+++ b/test-javascript.cfg
@@ -1,2 +1,5 @@
 [buildout]
 extends = https://raw.githubusercontent.com/4teamwork/ftw-buildouts/master/test-javascript.cfg
+
+[versions]
+setuptools = <45
